<resources>
    <string name="app_name">YaNotes</string>
    <string name="yanotes">YaNotes </string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="save">save</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="dialoguecontent">are you sure you want to delete this note?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="copy">copy</string>
</resources>