<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginVertical="2dp"
            android:hint="@string/title"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_toStartOf="@id/delete"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:maxLines="1"/>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="1dp"
            android:src="@drawable/delete_white"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:hint="@string/description"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginVertical="2dp"
            android:hint="@string/time"
            android:textColorHint="#B8B8B8"
            android:textColor="#B8B8B8"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:layout_below="@+id/description"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>


</androidx.cardview.widget.CardView>